--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                     <input type="email" name="email" placeholder="Enter email address" required>
                     <input type="text" name="subject" placeholder="Enter your subject" required>
                     <textarea rows="8" name="message" placeholder="Message" required></textarea>
-                    <button type="submit" class="hero-btn red-btn">Send Message</button>
+                    <button type="submit" class="hero-btn2">Send Message</button>
                     </form> 
                 </div>
             </div>
